--- a/index.html/index.html
+++ b/index.html/index.html
@@ -3,7 +3,7 @@
     <link rel="icon" href=
     "https://cdn-icons-png.flaticon.com/512/633/633832.png" type="image/x-icon">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content= "width=device-width, user-scaleble=no">
     
 	<head> 
 
